Added next few czech words, fixed issue with Save game from last commit

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1251,6 +1251,7 @@
 		French:"Hanse" //same in French
 		Polish:"Hanza"
 		Russian:"Ганзея"
+		Czech:"Hanza"
 }
 
 	"+5% Production for every Trade Route with a City-State in the empire":{
