--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -853,6 +853,10 @@
 		Simplified_Chinese:"显示像素单位"
 }
 
+	"Show pixel improvements":{
+		Simplified_Chinese:"显示像素地块设施"
+}
+
 	"Fontset":{
 		Italian:"Fontset"
 		Simplified_Chinese:"字体设置"
