--- a/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
+++ b/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
@@ -490,7 +490,7 @@
 		German:"Silber"
 		Dutch:"Zilver"
 		Spanish:"Plata"
-		Simplified_Chinese:"银"
+		Simplified_Chinese:"白银"
 		Portuguese:"Prata"
                 Korean:"은"
 		Czech:"Stříbro"
