--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -314,7 +314,7 @@
 		Italian:"Può costruire miglioramenti sulle risorse acquatiche"
 		French:"Peut créer des améliorations de ressources maritimes"
 		Romanian:"Poate crea îmbunătățiri pe resurse acvatice"
-		Simplified_Chinese:"可在水域资源建造设施"
+		Simplified_Chinese:"可在水域资源上建造设施（工船将被消耗掉）"
 		Portuguese:"Pode criar melhorias em recursos aquáticos"
 		German:"Kann Verbesserungen auf Wasserfeldern bauen"
 		Russian:"Может создать улучшения на водных ресурсах"
