--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -47,7 +47,7 @@
 		German:"in"
 		Dutch:"in"
 		Spanish:"en"
-		Simplified_Chinese:"建造/组建完成需"
+		Simplified_Chinese:"完成需"
 		Portuguese:"em"
 		Japanese:"に"
 		Czech:"v"
@@ -617,16 +617,18 @@
 		Portuguese:"IDADE DOURADA"
 		Japanese:"黄金時代"
 		Czech:"ZLATÝ VĚK"
-},
+}
 
 	// You don't have to translate this is it's good for your language, but some languages have their own display
 	"[year] BC":{ // Before Christus
 		Czech:"[year] př. n. l."
-	},
+		Simplified_Chinese:"公元前[year]年"
+	}
 
 	"[year] AD":{ // Anno Domini
 		Czech:"[year] n. l."
-	},
+		Simplified_Chinese:"公元[year]年"
+	}
 
 /////// Menu table
 
@@ -865,7 +867,7 @@
 	}
 	
 	"Replaces [improvement]":{
-		Simplified_Chinese:"替代现有设施：[improvement]"
+		Simplified_Chinese:"替换现有设施：[improvement]"
 		Czech:"Nahrazuje [improvement]"
 	}
 
@@ -1618,11 +1620,12 @@
 		Portuguese:"Felicidade base"
 		German:"Grundzufriedenheit"
 		Czech:"Základní spokojenost"
-},
+}
 
 	"Occupied City": {
-		"Czech":"Obsazená města"
-	},
+		Czech:"Obsazená města"
+		Simplified_Chinese:"吞并的城市"
+	}
 
 	"Buildings":{
 		Italian:"Edifici"
@@ -1662,10 +1665,16 @@
 
 	"Base values":{ 
 		Italian:"Valori di base"
+		Simplified_Chinese:"基础产出"
+}
+
+	"Bonuses":{ 
+		Simplified_Chinese:"相关加成"
 }
 
 	"Final":{ //Should be "Final values"
 		Italian:"Valori finali"
+		Simplified_Chinese:"实际产出"
 }
 
 	"Other":{ // Used for "other constructions" - Gold, Science, Nothing
@@ -1815,15 +1824,16 @@
 		French:"Ville la plus proche"
 		Romanian:"Cel mai apropiat oraș"
 		Spanish:"Ciudad más cercana"
-		Simplified_Chinese:"最靠近的城市"
+		Simplified_Chinese:"最近的城市"
 		Portuguese:"Cidade mais próxima"
 		German:"Nächstgelegene Stadt"
 		Czech:"Nejbližší město"
-},
+}
+
 	"Action":{ // Overview -> Units - Action (Header)
 		Czech:"Činnost"
-	},
-
+		Simplified_Chinese:"行动"
+	}
 
 	"Defeated":{
 		Italian:"Sconfitto"
@@ -1835,6 +1845,10 @@
 		Portuguese:"Derrotado"
 		Simplified_Chinese:"战败"
 		Czech:"Poražený(á)"
+}
+
+	"Tiles":{
+		Simplified_Chinese:"地块"
 }
 
 ////// Victory Screen
