--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -622,11 +622,13 @@
 
 	// You don't have to translate this is it's good for your language, but some languages have their own display
 	"[year] BC":{ // Before Christus
+		Italian:"[year] a.C."
 		Czech:"[year] př. n. l."
 		Simplified_Chinese:"公元前[year]年"
 	}
 
 	"[year] AD":{ // Anno Domini
+		Italian:"[year] d.C."
 		Czech:"[year] n. l."
 		Simplified_Chinese:"公元[year]年"
 	}
@@ -863,11 +865,13 @@
 }
 
 	"Provides [resource]":{
+		Italian:"Dona [resource]"
 		Simplified_Chinese:"获得资源：[resource]"
 		Czech:"Poskytuje [resource]"	
 	}
 	
 	"Replaces [improvement]":{
+		Italian:"Sostituisce [improvement]"
 		Simplified_Chinese:"替换现有设施：[improvement]"
 		Czech:"Nahrazuje [improvement]"
 	}
@@ -1624,6 +1628,7 @@
 }
 
 	"Occupied City": {
+		Italian:"Città occupata"
 		Czech:"Obsazená města"
 		Simplified_Chinese:"吞并的城市"
 	}
@@ -1641,6 +1646,7 @@
 }
 
 	"Tiles":{
+		Italian:"Caselle"
 		Czech:"Políčka"
 }
 
@@ -1675,6 +1681,7 @@
 }
 
 	"Bonuses":{
+		Italian:"Bonus"
 		Czech:"Bonusy"
 		Simplified_Chinese:"相关加成"
 }
@@ -1840,6 +1847,7 @@
 }
 
 	"Action":{ // Overview -> Units - Action (Header)
+		Italian:"Azione"
 		Czech:"Činnost"
 		Simplified_Chinese:"行动"
 }
@@ -1857,6 +1865,7 @@
 }
 
 	"Tiles":{
+		Italian:"Caselle"
 		Simplified_Chinese:"地块"
 }
 
@@ -2220,6 +2229,7 @@
 }
 
 	"Tutorials": {
+		Italian:"Tutorial"
 		"Czech": "Návody"
 }
 
@@ -2416,22 +2426,27 @@
 }
 
 	"Clear current map":{
+		Italian:"Ripulisci mappa"
 		Czech:"Vyčistit mapu"
 }
 
 	"Save map":{
+		Italian:"Salva mappa"
 		Czech:"Uložit mapu"
 }
 
 	"Load map":{
+		Italian:"Carica mappa"
 		Czech:"Načíst mapu"
 }
 
 	"Download map":{
+		Italian:"Scarica mappa"
 		Czech:"Stáhnout mapu"
 }
 
 	"Exit map editor":{
+		Italian:"Esci dall'editor"
 		Czech:"Ukončit editování mapy"
 }
 
