--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -88,7 +88,7 @@
 		Romanian:"[leaderName] de [nation]"
                 Polish:"[leaderName], władca cywilizacji [nation]",
 
-		Czech:"[leaderName], král civilizace [nation]"
+		Czech:"[leaderName], [nation]"
 }
 
 	"You'll pay for this!":{
