--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1787,7 +1787,7 @@
 		German:"+25% Verteidigung gegen alle Fernangriffe"
 		French:"+25% défence contre les attaques à distance"
 		Russian:"+25% защиты от дальних атак"
-		Simplified_Chinese:"对战远程单位时+25%防御力"
+		Simplified_Chinese:"遭受远程攻击时+25%防御力"
 		Czech:"+25% obrany proti útokům na dálku"
 }
 
