--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -748,7 +748,7 @@
 
 	"Resting point for Influence level with all City-States is increased by 20.":{
 		Italian:"Il punto neutro di livello d'Influenza per tutte le Città-Stato è portato a +20."
-		Czech:""
+		Czech:"Zbývající body vlivu v Městských státech jsou zvýšeny o 20%."
 }
 
 	"Scholasticism":{ //Needs Philantropy
