--- a/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
+++ b/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
@@ -335,7 +335,7 @@
 		Portuguese:"Bisontes"
 		Japanese:"バイソン"
                 Korean:"들소"
-		Czech:""
+		Czech:"Bizon"
 }
 
 ////////// Strategic Resources
@@ -530,7 +530,7 @@
 		Simplified_Chinese:"丝绸"
 		Portuguese:"Seda"
                 Korean:"실크"
-		Czech:""
+		Czech:"Hedvábí"
 }
 
 	"Spices":{
