--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -667,7 +667,7 @@
 
 	"+1 Food and +1 Production from all worked Desert tiles in the City (except Flood plains)":{
 		Italian:"+1 Cibo e +1 Produzione da tutte le caselle desertiche sfruttate dalla città (eccetto Terreni allagati)"
-		Czech:""
+		Czech:"+1 Jídlo a +1 Produkce za každé obděláváné políčkou pouště ve měste (kromě Údolní nivy)"
 		Polish:"+1 żywności i produkcji ze wszystkich pustynnych pól w mieście"
 }
 
@@ -1391,7 +1391,7 @@
 	"Get ":{
 		Italian:"Ottieni "
 		Simplified_Chinese:"获得"
-		Czech:"Bereme"
+		Czech:"Vybrat: "
 		Polish:"Otrzymaj"
 }
 
