--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1212,7 +1212,7 @@
 		Portuguese:"Observatório"
 		German:"Observatorium"
 		Polish:"Obserwatorium"
-		Czech:"observatoř"
+		Czech:"Observatoř"
 }
 
 	"Opera House":{
