--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1173,7 +1173,7 @@
 		German:"Ein kostenloser Großer Wissenschaftler erscheint"
 		Polish:"Pojawia się darmowy Wielki Naukowiec"
 		Russian:"Появляется бесплатный Великий Учёный"
-		Czech:"Získali jsme Velkého Vědce zdarma"
+		Czech:"Získáme Velkého Vědce zdarma"
 }
 
 	"Ironworks":{
@@ -1534,7 +1534,7 @@
 		Portuguese:"Aparece um Grande Artista grátis"
 		German:"Kostenloser Großer Künstler erscheint"
 		Polish:"Pojawił się darmowy Wielki Artysta"
-		Czech:"Získali jsme Velkéhu Umělce zdarma"
+		Czech:"Získáme Velkéhu Umělce zdarma"
 }
 
 	"Seaport":{
